@@ -34,20 +34,9 @@ AC_CHECK_HEADERS([sys/types.h sys/stat.h])
 AC_CHECK_FUNCS([umask])
 AC_CHECK_TYPES([mode_t])
 
-PKG_CHECK_MODULES([GTKMM], [glib-2.0 >= 2.0.7 gtk+-2.0 >= 2.0.6 sigc++-1.2 >= 1.2.1 gtkmm-2.0 >= 2.0.0])
+PKG_CHECK_MODULES([GTKMM], [gtkmm-2.0 >= 2.2.8 gconfmm-2.0 >= 2.0.0])
 AC_SUBST([GTKMM_CFLAGS])
 AC_SUBST([GTKMM_LIBS])
-
-AC_MSG_CHECKING([whether gtkmm-2.2 API additions are available])
-regexxer_have_gtkmm_22=no
-${PKG_CONFIG:-"pkg-config"} --atleast-version=2.2.0 gtkmm-2.0 2>&5 && regexxer_have_gtkmm_22=yes
-AC_MSG_RESULT([${regexxer_have_gtkmm_22}])
-
-if test "x$regexxer_have_gtkmm_22" = "xyes"; then
-{
-  AC_DEFINE([REGEXXER_HAVE_GTKMM_22], [1], [Define to 1 if gtkmm 2.2 API is available.])
-}
-fi
 
 gdk_pixbuf_exec_prefix=`${PKG_CONFIG:-"pkg-config"} --variable=exec_prefix gdk-pixbuf-2.0 2>&5`
 prog_search_path=${gdk_pixbuf_exec_prefix:+"$gdk_pixbuf_exec_prefix/bin$PATH_SEPARATOR"}$PATH
