@@ -714,17 +714,7 @@ bool FileTree::prev_match_file(Gtk::TreeModel::iterator& iter,
 
 void FileTree::expand_and_select(const Gtk::TreePath& path)
 {
-#if REGEXXER_HAVE_GTKMM_22
   expand_to_path(path);
-#else
-  std::stack<Gtk::TreePath> parents;
-
-  for(Gtk::TreePath parent (path); parent.up(); )
-    parents.push(parent);
-
-  for(; !parents.empty(); parents.pop())
-    expand_row(parents.top(), false);
-#endif
 
   get_selection()->select(path);
 
