@@ -36,11 +36,7 @@ ImageButton::ImageButton(const Gtk::StockID& stock_id, const Glib::ustring& name
 {
   add(*Gtk::manage(new Gtk::Image(stock_id, Gtk::ICON_SIZE_BUTTON)));
 
-#if REGEXXER_HAVE_GTKMM_22
   get_accessible()->set_name(name);
-#else
-  (void) name; // suppress warning about unused parameter
-#endif
 }
 
 ImageButton::~ImageButton()
